Added edit and update.

--- a/ChurchResourceManagerWeb/Views/Transactions/SubmitTransactions.cshtml
+++ b/ChurchResourceManagerWeb/Views/Transactions/SubmitTransactions.cshtml
@@ -1,5 +1,9 @@
 ﻿<page-header page-title="Submit Transaction"></page-header>
 
 <div ng-controller="transactionsController as tc">
-    <submit-transaction transaction="tc.transaction" on-submit="tc.doSave(transaction)" , on-clear-form="tc.doClearForm(form)" enums="tc.enums"></submit-transaction>
+    <div class="row">
+        <div class="col-xs-2">
+            <submit-transaction transaction="tc.transaction" on-submit="tc.doSave(transaction)" , on-clear-form="tc.doClearForm(form)" enums="tc.enums"></submit-transaction>
+        </div>
+    </div>
 </div>
