--- a/ChurchResourceManagerWeb/Views/Transactions/_transactionsGrid.cshtml
+++ b/ChurchResourceManagerWeb/Views/Transactions/_transactionsGrid.cshtml
@@ -45,7 +45,7 @@
                             <td>
                                 <span ng-click="tgc.edit(transaction)" uib-tooltip="Click to Edit" class="glyphicon glyphicon-pencil clickable"></span>
                                 |
-                                <span ng-click="tgc.delete(transaction.TransactionId)" uib-tooltip="Click to Delete" class="glyphicon glyphicon-remove clickable"></span>
+                                <span ng-click="tgc.deleteTransaction(transaction.TransactionId)" uib-tooltip="Click to Delete" class="glyphicon glyphicon-remove clickable"></span>
                             </td>
                         </tr>
                     </tbody>
