--- a/ChurchResourceManagerWeb/Views/Membership/_membersGrid.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_membersGrid.cshtml
@@ -5,15 +5,23 @@
                 <table class="table table-striped table-hover">
                     <thead>
                         <tr>
-                            <th width="15%">Family Name</th>
-                            <th width="20%">First Name</th>
-                            <th width="20%">Last Name</th>
-                            <th width="10%">Date of Birth</th>
-                            <th width="6%">Gender</th>
-                            <th width="8%">Membership Status</th>
+                            <th>Family Id</th>
+                            <th>Member Id</th>
+                            <th>Family Name</th>
+                            <th>First Name</th>
+                            <th>Last Name</th>
+                            <th>Date of Birth</th>
+                            <th>Gender</th>
+                            <th>Membership Status</th>
                             <th width="3%"></th> <!--empty space for edit/delete-->
                         </tr>
                         <tr class="list-group" id="searchRow" name="searchRow">
+                            <td>
+                                <input type="text" id="txtFamilyId" name="txtFamilyId" class="form-control" ng-model="search.FamilyId" />
+                            </td>
+                            <td>
+                                <input type="text" id="txtMemberId" name="txtMemberId" class="form-control" ng-model="search.MemberId" />
+                            </td>
                             <td>
                                 <input type="text" id="txtFamilyName" name="txtFamilyName" class="form-control" ng-model="search.FamilyName" />
                             </td>
@@ -36,6 +44,8 @@
                     </thead>
                     <tbody>
                         <tr class="text-left" ng-repeat="member in mgc.members | filter: search">
+                            <td>{{member.FamilyId}}</td>
+                            <td>{{member.MemberId}}</td>
                             <td>{{member.FamilyName}}</td>
                             <td>{{member.FirstName}}</td>
                             <td>{{member.LastName}}</td>
