Fixed Add/Remove contact info

--- a/ChurchResourceManagerWeb/Views/Membership/AddMembership.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/AddMembership.cshtml
@@ -11,7 +11,8 @@
                        on-edit="mc.doEdit(formName)"
                        on-submit="mc.doSave(formName, formData)"
                        state-list="mc.stateList"
-                       on-find-active-index="mc.findActiveIndex(currentIndex, arrayCount)">
+                       on-find-active-index="mc.findActiveIndex(currentIndex, arrayCount)"
+                       enable-disable-contact-info="mc.enableDisableContactInfo(info)">
 
     </manage-membership>
 </div>
