--- a/ChurchResourceManagerWeb/Views/Membership/_editMembershipModal.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_editMembershipModal.cshtml
@@ -1,4 +1,4 @@
-﻿    <div class="modal-header">
+﻿<div class="modal-header">
     <button type="button" class="close" ng-click="emc.dismiss()">&times;</button>
     <h4 class="modal-title text-center" id="modal-title">Edit Membership</h4>
 </div>
@@ -17,7 +17,8 @@
                            on-submit="emc.doSave(formName, formData)"
                            state-list="emc.stateList"
                            on-find-active-index="emc.findActiveIndex(currentIndex, arrayCount)"
-                           is-edit-mode="true">
+                           is-edit-mode="true"
+                           enable-disable-contact-info="emc.enableDisableContactInfo(info)">
 
         </manage-membership>
     </div>
