Added Hoh and Spouse validation for member info form

--- a/ChurchResourceManagerWeb/Views/Shared/_Layout.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_Layout.cshtml
@@ -11,6 +11,8 @@
         <div ng-message="minlength">Message must be over 10 characters</div>
         <span ng-message="required">This is required!</span>
         <div ng-message="maxlength">Message must not exceed 100 characters</div>
+        <div ng-message="equalWithHoh">Only one Head of Household is allowed</div>
+        <div ng-message="equalWithSpouse">Only one Spouse is allowed</div>
     </script>
 
 
