--- a/ChurchResourceManagerWeb/Views/Home/Index.cshtml
+++ b/ChurchResourceManagerWeb/Views/Home/Index.cshtml
@@ -1,50 +1,4 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
-
-@*<div class="row">
-        <div class="col-lg-12">
-            <div ng-controller="homeController as h">
-                <div class="jumbotron">
-                    <h1>ASP.NET</h1>
-                    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-                    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-                </div>
-
-                <div class="row">
-                    <div class="col-md-4">
-                        <h2>Membership</h2>
-                        <p>
-                            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-                            enables a clean separation of concerns and gives you full control over markup
-                            for enjoyable, agile development.
-                        </p>
-                        <p>
-                            <a class="btn btn-default" ng-href="/Membership/Home">Go to Membership &raquo;</a>
-                        </p>
-                    </div>
-                    <div class="col-md-4">
-                        <h2>Treasury</h2>
-                        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-                        <p>
-                            <a class="btn btn-default" ng-href="/Treasury/Home">Go to Treasury &raquo;</a>
-                        </p>
-                    </div>
-                    <div class="col-md-4">
-                        <h2>Reports</h2>
-                        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-                        <p>
-                            <a class="btn btn-default" ng-href="/Tithing/Home">Go to Reports &raquo;</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>*@
-
-
-
-<div class="row">
+﻿<div class="row">
     <div class="col-lg-12">
         <h1 class="page-header">Dashboard</h1>
     </div>
