Added navigation toggle

--- a/ChurchResourceManagerWeb/Content/Site.css
+++ b/ChurchResourceManagerWeb/Content/Site.css
@@ -185,12 +185,13 @@ body {
 .sidebar .arrow {
   float: right;
 }
-.sidebar .fa.arrow:before {
-  content: "\f104";
+/*.sidebar .fa.arrow:before {
+    content: "\f104";
 }
+
 .sidebar .active > a > .fa.arrow:before {
-  content: "\f107";
-}
+    content: "\f107";
+}*/
 .sidebar .nav-second-level li,
 .sidebar .nav-third-level li {
   border-bottom: none !important;
