--- a/ChurchResourceManagerWeb/Content/CustomStyling.less
+++ b/ChurchResourceManagerWeb/Content/CustomStyling.less
@@ -116,13 +116,13 @@ body {
     float: right;
 }
 
-.sidebar .fa.arrow:before {
+/*.sidebar .fa.arrow:before {
     content: "\f104";
 }
 
 .sidebar .active > a > .fa.arrow:before {
     content: "\f107";
-}
+}*/
 
 .sidebar .nav-second-level li,
 .sidebar .nav-third-level li {
