Fixed Navbar navigation

--- a/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
@@ -41,56 +41,56 @@
                         <a ng-href="#">
                             <i class="fa fa-users fa-fw"></i>
                             Manage Membership
-                            <span class="arrow" ng-class="{'fa fa-angle-down': hc.parentSideBar.ManageMembership.active, 'fa fa-angle-left': !hc.parentSideBar.ManageMembership.active}"></span>
+                            <span class="arrow" ng-class="{'fa fa-angle-down': hc.isActiveParentNav('ManageMembership'), 'fa fa-angle-left': !hc.isActiveParentNav('ManageMembership')}"></span>
                         </a>
-                        <ul ng-show="hc.parentSideBar.ManageMembership.active" class="nav nav-second-level">
+                        <ul ng-show="hc.openCloseNav('Membership') || hc.isActiveParentNav('ManageMembership')" class="nav nav-second-level">
                             <li ng-click="hc.addMembershipLocationCheck()">
-                                <a ng-class="{'active': hc.parentSideBar.ManageMembership.AddMembership.active}" ng-href="/Membership/AddMembership">Add Membership</a>
+                                <a ng-class="{'active': hc.checkActive('AddMembership')}" ng-href="/Membership/AddMembership">Add Membership</a>
                             </li>
                             <li>
-                                <a ng-class="{'active': hc.parentSideBar.ManageMembership.ViewMembership.active}" ng-href="/Membership/MembersSearch">View Membership</a>
+                                <a ng-class="{'active': hc.checkActive('MembersSearch')}" ng-href="/Membership/MembersSearch">View Membership</a>
                             </li>
                         </ul>
                     </li>
                     <li ng-click="hc.activateDeactivateParent('ManageTithes')">
                         <a ng-href="#">
                             <i class="fa fa-money fa-fw"></i>
-                            Manage Tithes<span class="arrow" ng-class="{'fa fa-angle-down': hc.parentSideBar.ManageTithes.active, 'fa fa-angle-left': !hc.parentSideBar.ManageTithes.active}"></span>
+                            Manage Tithes<span class="arrow" ng-class="{'fa fa-angle-down': hc.isActiveParentNav('ManageTithes'), 'fa fa-angle-left': !hc.isActiveParentNav('ManageTithes')}"></span>
                         </a>
-                        <ul ng-show="hc.parentSideBar.ManageTithes.active" class="nav nav-second-level">
+                        <ul ng-show="hc.openCloseNav('Tithing') || hc.isActiveParentNav('ManageTithes')" class="nav nav-second-level">
                             <li ng-click="hc.addTithesLocationCheck()">
-                                <a ng-class="{'active': hc.parentSideBar.ManageMembership.AddTithes.active}" ng-href="/Tithing/AddTithes">Add Tithes</a>
+                                <a ng-class="{'active': hc.checkActive('AddTithes')}" ng-href="/Tithing/AddTithes">Add Tithes</a>
                             </li>
                             <li>
-                                <a ng-class="{'active': hc.parentSideBar.ManageMembership.ViewTithes.active}" ng-href="/Tithing/TithesSearch">View Tithes</a>
+                                <a ng-class="{'active': hc.checkActive('TithesSearch')}" ng-href="/Tithing/TithesSearch">View Tithes</a>
                             </li>
                         </ul>
                     </li>
                     <li ng-click="hc.activateDeactivateParent('ManageOfferings')">
                         <a ng-href="#">
                             <i class="fa fa-dollar fa-fw"></i>
-                            Manage Offerings<span class="arrow" ng-class="{'fa fa-angle-down': hc.parentSideBar.ManageOfferings.active, 'fa fa-angle-left': !hc.parentSideBar.ManageOfferings.active}"></span>
+                            Manage Offerings<span class="arrow" ng-class="{'fa fa-angle-down': hc.isActiveParentNav('ManageOfferings'), 'fa fa-angle-left': !hc.isActiveParentNav('ManageOfferings')}"></span>
                         </a>
-                        <ul ng-show="hc.parentSideBar.ManageOfferings.active" class="nav nav-second-level">
+                        <ul ng-show="hc.openCloseNav('Offerings') || hc.isActiveParentNav('ManageOfferings')" class="nav nav-second-level">
                             <li ng-click="hc.addOfferingsLocationCheck()">
-                                <a ng-class="{'active': hc.parentSideBar.ManageMembership.AddOfferings.active}" ng-href="/Offerings/AddOfferings">Add Offerings</a>
+                                <a ng-class="{'active': hc.checkActive('AddOfferings')}" ng-href="/Offerings/AddOfferings">Add Offerings</a>
                             </li>
                             <li>
-                                <a ng-class="{'active': hc.parentSideBar.ManageMembership.ViewOfferings.active}" ng-href="/Offerings/OfferingsSearch">View Offerings</a>
+                                <a ng-class="{'active': hc.checkActive('OfferingsSearch')}" ng-href="/Offerings/OfferingsSearch">View Offerings</a>
                             </li>
                         </ul>
                     </li>
                     <li ng-click="hc.activateDeactivateParent('ManageTransactions')">
                         <a ng-href="#">
                             <i class="fa fa-bank fa-fw"></i>
-                            Manage Transactions<span class="arrow" ng-class="{'fa fa-angle-down': hc.parentSideBar.ManageTransactions.active, 'fa fa-angle-left': !hc.parentSideBar.ManageTransactions.active}"></span>
+                            Manage Transactions<span class="arrow" ng-class="{'fa fa-angle-down': hc.isActiveParentNav('ManageTransactions'), 'fa fa-angle-left': !hc.isActiveParentNav('ManageTransactions')}"></span>
                         </a>
-                        <ul ng-show="hc.parentSideBar.ManageTransactions.active" class="nav nav-second-level">
+                        <ul ng-show="hc.openCloseNav('Transactions') || hc.isActiveParentNav('ManageTransactions')" class="nav nav-second-level">
                             <li ng-click="hc.submitTransactionLocationCheck()">
-                                <a ng-class="{'active': hc.parentSideBar.ManageMembership.SubmitTransactions.active}" ng-href="/Transactions/SubmitTransactions">Submit Transaction</a>
+                                <a ng-class="{'active': hc.checkActive('SubmitTransactions')}" ng-href="/Transactions/SubmitTransactions">Submit Transaction</a>
                             </li>
                             <li>
-                                <a ng-class="{'active': hc.parentSideBar.ManageMembership.ViewTransactions.active}" ng-href="/Transactions/TransactionsSearch">View Transactions</a>
+                                <a ng-class="{'active': hc.checkActive('TransactionsSearch')}" ng-href="/Transactions/TransactionsSearch">View Transactions</a>
                             </li>
                         </ul>
                     </li>
