--- a/ChurchResourceManagerWeb/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/ChurchResourceManagerWeb/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model ChurchResourceManager.Models.ExternalLoginConfirmationViewModel
+﻿@model ChurchResourceManagerWeb.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
