--- a/ChurchResourceManagerWeb/Views/Account/ForgotPassword.cshtml
+++ b/ChurchResourceManagerWeb/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model ChurchResourceManager.Models.ForgotPasswordViewModel
+﻿@model ChurchResourceManagerWeb.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
