--- a/ChurchResourceManagerWeb/Views/Account/Register.cshtml
+++ b/ChurchResourceManagerWeb/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model ChurchResourceManager.Models.RegisterViewModel
+﻿@model ChurchResourceManagerWeb.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
