--- a/ChurchResourceManagerWeb/Views/Account/ResetPassword.cshtml
+++ b/ChurchResourceManagerWeb/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model ChurchResourceManager.Models.ResetPasswordViewModel
+﻿@model ChurchResourceManagerWeb.Models.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
