--- a/ChurchResourceManagerWeb/Views/Account/VerifyCode.cshtml
+++ b/ChurchResourceManagerWeb/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model ChurchResourceManager.Models.VerifyCodeViewModel
+﻿@model ChurchResourceManagerWeb.Models.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
