--- a/ChurchResourceManagerWeb/Views/Manage/AddPhoneNumber.cshtml
+++ b/ChurchResourceManagerWeb/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model ChurchResourceManager.Models.AddPhoneNumberViewModel
+﻿@model ChurchResourceManagerWeb.Models.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
