--- a/ChurchResourceManagerWeb/Views/Manage/Index.cshtml
+++ b/ChurchResourceManagerWeb/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model ChurchResourceManager.Models.IndexViewModel
+﻿@model ChurchResourceManagerWeb.Models.IndexViewModel
 @{
     ViewBag.Title = "Manage";
 }
