--- a/ChurchResourceManagerWeb/Views/Manage/SetPassword.cshtml
+++ b/ChurchResourceManagerWeb/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model ChurchResourceManager.Models.SetPasswordViewModel
+﻿@model ChurchResourceManagerWeb.Models.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
