--- a/ChurchResourceManagerWeb/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/ChurchResourceManagerWeb/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model ChurchResourceManager.Models.VerifyPhoneNumberViewModel
+﻿@model ChurchResourceManagerWeb.Models.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
