--- a/ChurchResourceManagerWeb/Views/Account/SendCode.cshtml
+++ b/ChurchResourceManagerWeb/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model ChurchResourceManager.Models.SendCodeViewModel
+﻿@model ChurchResourceManagerWeb.Models.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
