--- a/ChurchResourceManagerWeb/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/ChurchResourceManagerWeb/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model ChurchResourceManager.Models.ExternalLoginListViewModel
+﻿@model ChurchResourceManagerWeb.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
