--- a/ChurchResourceManagerWeb/Views/Manage/ChangePassword.cshtml
+++ b/ChurchResourceManagerWeb/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model ChurchResourceManager.Models.ChangePasswordViewModel
+﻿@model ChurchResourceManagerWeb.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
