--- a/ChurchResourceManagerWeb/Views/Manage/ManageLogins.cshtml
+++ b/ChurchResourceManagerWeb/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model ChurchResourceManager.Models.ManageLoginsViewModel
+﻿@model ChurchResourceManagerWeb.Models.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
